Add biome configuration and implement random value generation
- Remove VSCode settings file.
- Add biome.json for configuration with linter and formatter settings.
- Update package.json to include @biomejs/biome as a dev dependency.
- Create RandomCore class for random number generation.
- Refactor index.ts to utilize RandomCore and export RandomValues class.
- Implement utility functions for random number generation in utils.ts.
- Update tests to validate random number generation functionality.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "release": "bumpp && npm publish"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.4",
     "@types/node": "24.4.0",
     "bumpp": "10.2.3",
     "tsdown": "0.15.1",
