chore: add .editorconfig and .gitattributes for consistent formatting; update biome.json and package.json for linting

--- a/biome.json
+++ b/biome.json
@@ -8,6 +8,7 @@
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
+    "lineEnding": "lf",
     "lineWidth": 80,
     "useEditorconfig": false,
     "indentWidth": 2
