--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dev": "tsdown --watch",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
+    "lint": "biome lint && biome format",
     "release": "bumpp && npm publish"
   },
   "devDependencies": {
