--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "packageManager": "pnpm@10.16.1",
   "name": "random-values",
-  "version": "0.0.2-beta.7",
+  "version": "0.0.0",
   "description": "A utility package for generating random values including numbers, strings, and objects, with support for custom probabilities and weighted distributions.",
   "type": "module",
   "license": "MIT",
@@ -44,13 +44,11 @@
     "vitest": "3.2.4"
   },
   "keywords": [
-    "random",
     "random-values",
-    "chance",
-    "faker",
+    "random",
+    "randomizer",
     "simulation",
     "utilities",
-    "data generation",
     "seeded",
     "pseudo",
     "value generator"
