chore: update copyright and repository links to reflect new ownership

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "description": "A utility package for generating random values including numbers, strings, and objects, with support for custom probabilities and weighted distributions.",
   "type": "module",
   "license": "MIT",
-  "homepage": "https://github.com/moebhius/random-values#readme",
+  "homepage": "https://github.com/Jkous/random-values#readme",
   "bugs": {
-    "url": "https://github.com/moebhius/random-values/issues"
+    "url": "https://github.com/Jkous/random-values/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/moebhius/random-values.git"
+    "url": "git+https://github.com/Jkous/random-values.git"
   },
   "author": "Jorge Muñoz",
   "files": [
